# bundeshaushalt

./: .gitignore  README.md  pyproject.toml
input_data/: funktionen_formatted.csv  funktionen_long_transposed.csv
input_data/haushalt_daten/: hh_2014.csv  hh_2015.csv  hh_2017.csv  hh_2018.csv  hh_2019.csv  hh_2023.csv  hh_2024.csv
input_data/haushalt_total/: hh_total.csv
input_data/nachtragshaushalte/: nhh_2015_1.csv  nhh_2015_2.csv  nhh_2016_1.csv  nhh_2020_1.csv  nhh_2020_2.csv  nhh_2021_1.csv  nhh_2021_2.csv  nhh_2023_1.csv
output_data/: funktionen_formatted.json  funktionen_long_transposed.json
output_data/haushalts_daten/: hh_2014.csv  hh_2017.csv  hh_2022.csv  hh_total.csv
output_data/haushalts_daten/archiv/: nhh_2015_1.csv  nhh_2020_1.csv
output_data/haushalts_daten/mit_nachtrag/: nhh_2015_2.csv  nhh_2016_1.csv  nhh_2020_2.csv  nhh_2021_1.csv  nhh_2021_2.csv  nhh_2023_1.csv
output_data/haushalts_daten/nach_hauptfunktion/: hh_2014_haupt.csv  hh_2015_haupt.csv  hh_2016_haupt.csv  hh_2017_haupt.csv  hh_2018_haupt.csv  hh_2019_haupt.csv  hh_2020_haupt.csv  hh_2021_haupt.csv  hh_2022_haupt.csv  hh_2023_haupt.csv  hh_2024_haupt.csv
output_data/haushalts_daten/nach_oberfunktion/: hh_2014_ober.csv  hh_2015_ober.csv  hh_2016_ober.csv  hh_2017_ober.csv  hh_2018_ober.csv  hh_2019_ober.csv  hh_2020_ober.csv  hh_2021_ober.csv  hh_2022_ober.csv  hh_2023_ober.csv  hh_2024_ober.csv
output_data/haushalts_daten/ohne_spezifikation/: hh_2015.csv  hh_2016.csv  hh_2018.csv  hh_2019.csv  hh_2020.csv  (+1 more)
src/: data_agg.py  data_prep.py  data_vis.py  main.py  supp_data.py
